11710123_project2/test/test_11710123_1.spl
// type 1 and type 5
int main(){
    int a = 10;
    a = b;
    return 0;
}